--- a/src/www/stylesheetMainPage.css
+++ b/src/www/stylesheetMainPage.css
@@ -7,7 +7,12 @@
 html, body {
   height: 100%;
 }
-  
+#text-input {
+  rows :"80%";
+  columns : "135.9%";
+
+}  
+
   body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
@@ -92,7 +97,7 @@ html, body {
   }
   
   .button {
-    background-color: gray; /* Green */
+    background-color: gray;
     border: none;
     color: whitesmoke;
     padding: none;
