--- a/src/www_quilltest/stylesheet.css
+++ b/src/www_quilltest/stylesheet.css
@@ -1,16 +1,34 @@
 body{
     background: rgb(44,46,57);
-    background: linear-gradient(0deg, rgba(44,46,57,1) 0%, 
-    rgba(85,88,96,1) 100%);
+    background: linear-gradient(0deg, rgba(25, 20, 30) 0%, 
+    rgba(41, 53, 66) 100%);
 }
 
 header{
     padding-bottom: 25px;
     padding-top: 25px;
     background-color: rgb(2, 22, 99);
-    background: linear-gradient(90deg, rgba(2, 22, 99) 0%, 
-    rgba(251, 98, 118) 100%);
+    background: linear-gradient(90deg, rgba(7, 25, 50) 0%, 
+    rgba(13, 72, 72) 100%);
     box-shadow: 5px 10px rgba(25, 25, 25, .25);
+}
+
+header > button{
+    margin-left: 2.5%;
+    width: 20%;
+    height: 5vh;
+    background-color: rgb(13, 72, 72);
+    font-family: 'Merriweather', serif;
+}
+
+header > input{
+    margin-left: 2.5%;
+    width: 20%;
+    height: 5vh;
+    background-color: rgb(113, 172, 172);
+    font-family: 'Merriweather', serif;
+    font-size: larger;
+    text-align: center;
 }
 
 .column{
@@ -27,9 +45,9 @@ header{
 }
 
 #para > #notes{
-    background-color: gainsboro;
-    background: linear-gradient(270deg, gainsboro 50%, 
-    darkgray 100%);
+    background-color: rgba(7, 25, 50);
+    background: linear-gradient(90deg, rgba(17, 35, 60) 0%, 
+    rgb(13, 62, 62) 100%);
     margin-bottom: 2vh;
     box-shadow: 5px 10px rgba(25, 25, 25, .25);
     min-height: 5vh;
@@ -39,18 +57,32 @@ header{
 #para > #notes > button{
     margin-left: 12.5%;
     width: 75%;
-    height: 5.5%;
-    background-color: gainsboro;
+    height: 5vh;
+    background-color: rgb(13, 72, 72);
+    font-family: 'Merriweather', serif;
 }
 
 #para2{
     padding-left: 5px;
-    height: 65%;
-    width: 69%;
+    margin-right: 5%;
+    height: 70%;
+    width: 59%;
     float: right;
 }
 
 #editor{
     background-color: snow;
     box-shadow: 5px 10px rgba(25, 25, 25, .25);
+    background: linear-gradient(180deg, rgba(229, 232, 235) 0%, 
+    rgba(169, 179, 187) 100%);
+    font-family: 'Roboto', sans-serif;
+}
+
+#save{
+    font-family: 'Merriweather', serif;
+    float: right;
+    margin-top: 5vh;
+    margin-right: 5vw;
+    height: 5vh;
+    width: 5vw;
 }
