--- a/src/www/stylesheetMainPage.css
+++ b/src/www/stylesheetMainPage.css
@@ -1,7 +1,6 @@
 
 * {
   box-sizing: border-box;
-  border: 1px solid black;
 }
 
 html, body {
@@ -26,6 +25,7 @@ html, body {
     margin: 0;
     padding: 0;
     background-color: gray;
+    border: 1px solid black;
   }
   
   
@@ -35,6 +35,7 @@ html, body {
     padding: 16px;
     text-decoration: none;
     display: block;
+    border: 1px solid black;
     /* block */
   }
   
@@ -42,12 +43,14 @@ html, body {
   .sidenav a:hover {
     background-color: #ddd;
     color: white;
+    border: 1px solid black;
   }
   
   .header {
     color: white;
     text-decoration: none;
     display: block;
+    border: 1px solid black;
   }
  
  .note-header {
@@ -57,6 +60,7 @@ html, body {
   background-color: #2196F3;
   padding: 0;
   margin: 0;
+  border: 1px solid black;
 }
 
  .note-header > div {
@@ -67,6 +71,8 @@ html, body {
 
 #editor {
   background-color: snow;
+  max-width: 69%;
+  height: 80%;
 }
   
   #buttons {
@@ -82,6 +88,10 @@ html, body {
     width: 0px;
     height: 0px;
    
+  }
+
+  #notes{
+    border: 1px solid black;
   }
   
   .button {
