--- a/src/www/stylesheet.css
+++ b/src/www/stylesheet.css
@@ -183,3 +183,9 @@ body {
     text-align: center;
     font-size: 100%;
 }
+
+#scrolling-container{
+    height: 100%;
+    min-height: 100%;
+    overflow-y: auto;
+}
