--- a/src/www/stylesheet.css
+++ b/src/www/stylesheet.css
@@ -187,5 +187,6 @@ body {
 #scrolling-container{
     height: 100%;
     min-height: 100%;
-    overflow-y: auto;
+    max-height: 100%;
+    overflow-y: hidden;
 }
