--- a/src/www/stylesheet.css
+++ b/src/www/stylesheet.css
@@ -54,7 +54,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100%;
-    background-color: tomato;
+    background-color: rgb(126, 71, 255);
 }
 
 #login-body .standard-button {
@@ -104,7 +104,7 @@ body {
 /* hela rutan på högra sidan som innehåller anteckningens rubrik, editor och knappar. */
 #note-main-grid {
     display: grid;
-    background-color: red;
+    background-color: rgb(0, 81, 255);
 
     grid-template-columns: auto;
     grid-template-rows: 50px auto 40px;
