--- a/src/www/stylesheet.css
+++ b/src/www/stylesheet.css
@@ -2,9 +2,11 @@
 
 :root {
     --shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
-    --background-color: rgb(0, 128, 128);
+    --background-color: rgb(111, 179, 184);
     --border-color: rgb(0, 73, 73);
-    --selected-color: rgb(0, 110, 110);
+    --selected-color: rgb(56, 111, 117);
+    --focus-color:  rgb(143,205,212);
+    --button-color: rgb(56, 128, 135);
 }
 
 /* GLOBAL -------------------------------------------------------------------*/
@@ -27,7 +29,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: teal;
+    background-color: var(--button-color);
     text-decoration: none;
     font-size: 100%;
     cursor: pointer;
@@ -37,14 +39,39 @@ body {
     margin-left: 5px;
 }
 
+.header-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--button-color);
+    background: linear-gradient(90deg, var(--button-color) 80%,
+     var(--focus-color) 150%);
+    text-decoration: none;
+    font-size: 100%;
+    cursor: pointer;
+    border: 1px solid black;
+    height: 10vh;
+    width: 90%;
+    box-shadow: 0 2px 8px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+    margin-top: 5px;
+}
+
+.standard-button:hover{
+    background-color: var(--selected-color);
+}
+
+.header-button:hover{
+    background-color: var(--selected-color);
+}
+
+.standard-button:focus{
+    background-color: var(--focus-color);
+}
+
 .standard-button > div {
     display: flex;
     align-items: center;
     margin: 0 13px 0 5px;
-}
-
-.standard-button:hover {
-    background-color: var(--selected-color);
 }
 
 /* LOGIN --------------------------------------------------------------------*/
@@ -54,7 +81,9 @@ body {
     justify-content: center;
     align-items: center;
     height: 100%;
-    background-color: rgb(126, 71, 255);
+    background-color: rgb(205, 209, 197);
+    background: linear-gradient(180deg, rgba(218, 222, 209) 0%,
+     rgba(246, 246, 242) 50%);
 }
 
 #login-body .standard-button {
@@ -66,7 +95,7 @@ body {
     grid-template-columns: auto;
     grid-template-rows: auto 40px 40px;
     margin-bottom: 10%;
-    background-color: teal;
+    background-color: rgb(111, 179, 184);
     padding: 20px;
     border-radius: 5px;
     box-shadow: var(--shadow);
@@ -76,11 +105,11 @@ body {
 #login-textfield {
     border: 1px solid var(--border-color);
     border-radius: 5px;
-    background-color: rgba(var(--background-color));
+    background-color: var(--background-color);
 }
 
 #login-textfield:focus {
-    background-color: var(--selected-color);
+    background-color: var(--focus-color);
 }
 
 #login-buttons {
@@ -104,10 +133,12 @@ body {
 /* hela rutan på högra sidan som innehåller anteckningens rubrik, editor och knappar. */
 #note-main-grid {
     display: grid;
-    background-color: rgb(0, 81, 255);
+    background: linear-gradient(180deg, rgba(246, 246, 242) 0%,
+     rgba(246, 246, 242) 50%);
 
     grid-template-columns: auto;
     grid-template-rows: 50px auto 40px;
+    box-shadow: var(--shadow);
 }
 
 #editor {
@@ -127,7 +158,7 @@ body {
     justify-content: right;
     align-items: center;
     padding-right: 10px;
-    background-color: greenyellow;
+    background-color: var(--selected-color);
 }
 
 /* PROBLEM */
@@ -146,7 +177,8 @@ body {
     flex-direction: column;
     margin: 0;
     padding: 0;
-    background-color: var(--background-color);
+    background: linear-gradient(180deg, var(--selected-color) -5%,
+     rgba(143,205,212) 10%);
     border-right: 1px solid black;
 }
 
@@ -176,12 +208,20 @@ body {
     align-items: center;
     font-size: 200%;
     border: 1px solid black;
+    background: linear-gradient(90deg, var(--button-color) 20%,
+     var(--focus-color) 80%);
 }
   
 .note-header > div {
     background-color: rgba(255, 255, 255, 0.8);
     text-align: center;
     font-size: 100%;
+}
+
+#header-buttons {
+    display: flex;
+    align-items: center;
+    justify-content: right;
 }
 
 #scrolling-container{
