Check if user exists when logging in
Flyttade också på logga ut knappen V0.1

--- a/src/www/stylesheet.css
+++ b/src/www/stylesheet.css
@@ -216,6 +216,10 @@ button:focus {
     background-color: var(--selected-color);
 }
 
+#logout-button{
+    margin-left: 85%;
+}
+
 /* PROBLEM */
 #buttons-container div {
     width: 0px;
