--- a/src/www/stylesheet.css
+++ b/src/www/stylesheet.css
@@ -82,9 +82,10 @@ body {
     text-decoration: none;
     font-size: 24px;
     cursor: pointer;
-    border: 1px;
+    border: none;
+    padding: 1px;
     border-radius: 100%;
-    height: 0px;
+    height: none;
     margin-left: none;
 }
 
@@ -94,9 +95,7 @@ body {
     margin: 0 13px 0 5px;
 }
 
-.special-round-button:hover {
-    background-color: var(--selected-color);
-}
+
 
 button:focus {
     outline:0;
