--- a/src/www/stylesheet.css
+++ b/src/www/stylesheet.css
@@ -94,50 +94,13 @@ body {
 /* SKALET FÖR HELA NOTES/MAIN-SIDAN */
 #notes-body {
     display: grid;
-    height: 100%;
+    height: 100vh;
+    max-height: 100vh;
+    background-color: olivedrab;
     
     /* 20%: bredden för sidenav */
-    /* auto: resten av utrymmet på skärmen, dvs editorn */
+    /* auto: resten av utrymmet på skärmen, dvs editorn, spara-knappar och rubrik etc. */
     grid-template-columns: 20% auto;
-}
-
-/* hela rutan på högra sidan som innehåller anteckningens rubrik, editor och knappar. */
-#note-main-grid {
-    display: grid;
-    background-color: red;
-
-    grid-template-columns: auto;
-    grid-template-rows: 50px auto 40px;
-}
-
-#editor {
-    margin: 0;
-    padding: 0;
-    max-height: 90%;
-}
-
-.ql-toolbar {
-    margin: 0;
-    padding: 0;
-}
-
-/* Container där knapparna Save och Reset finns (för tillfället) */
-#buttons-container {
-    display: flex;
-    justify-content: right;
-    align-items: center;
-    padding-right: 10px;
-    background-color: greenyellow;
-}
-
-/* PROBLEM */
-#buttons-container div {
-    width: 0px;
-    height: 0px;
-}
-
-#toolbar {
-    background-color: orchid;
 }
 
 /* Style the side navigation */
@@ -146,8 +109,10 @@ body {
     flex-direction: column;
     margin: 0;
     padding: 0;
-    background-color: var(--background-color);
     border-right: 1px solid black;
+
+    max-height: 100%;
+    height: 100%;
 }
 
 /* Side navigation links */
@@ -169,13 +134,16 @@ body {
     color: black;
     display: block; /* Så att div:en tar upp hela bredden (för att enkelt kunna centrera texten) */
 }
-   
+
+/* NOTES --------------------------------------------------------------------*/
+
+
+
 .note-header {
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 200%;
-    border: 1px solid black;
 }
   
 .note-header > div {
@@ -184,9 +152,52 @@ body {
     font-size: 100%;
 }
 
-#scrolling-container{
+/* Container där knapparna Save och Reset finns (för tillfället) */
+#buttons-container {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    padding-right: 10px;
+    background-color: darkcyan;
+}
+
+/* PROBLEM */
+#buttons-container div {
+    width: 0px;
+    height: 0px;
+}
+
+/* QUILL --------------------------------------------------------------------*/
+
+/* hela rutan på högra sidan som innehåller anteckningens rubrik, editor och knappar. */
+/* Funkar bra! */
+#note-main-grid {
+    display: grid;
+    height: 100vh;
+    max-height: 100vh;
+    grid-template-rows: 50px auto 40px;
+    border: 5px solid black;
+}
+
+#quill-container {
     height: 100%;
-    min-height: 100%;
     max-height: 100%;
-    overflow-y: hidden;
+    overflow: auto;
+
+    display: grid;
+    grid-template-rows: min-content auto;
+}
+
+#quill-editor {
+    height: 100%;
+    background-color: palegoldenrod;
+    max-height: 100%;
+    overflow: auto;
+}
+
+.ql-container.ql-snow {
+    height: auto;
+}
+.ql-editor {
+    overflow-y: scroll;
 }
