--- a/src/www/stylesheet.css
+++ b/src/www/stylesheet.css
@@ -504,7 +504,6 @@ button:focus {
     height: 100vh;
     max-height: 100vh;
     grid-template-rows: 50px auto 40px;
-    border: 5px solid black;
 }
 
 #header-buttons {
@@ -513,19 +512,19 @@ button:focus {
     justify-content: right;
 }
 
+#quill-editor {
+    height: 100%;
+    max-height: 100%;
+    overflow: auto;
+}
+
+#quill-container {
     height: 100%;
     max-height: 100%;
     overflow: auto;
 
     display: grid;
     grid-template-rows: min-content auto;
-}
-
-#quill-editor {
-    height: 100%;
-    background-color: palegoldenrod;
-    max-height: 100%;
-    overflow: auto;
 }
 
 .ql-container.ql-snow {
