--- a/src/www/stylesheet.css
+++ b/src/www/stylesheet.css
@@ -341,15 +341,15 @@ button:focus {
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
     color:  var(--text-med-emphasis);
     opacity: 1; /* Firefox */
-  }
+}
   
-  :-ms-input-placeholder { /* Internet Explorer 10-11 */
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
     color:  var(--text-med-emphasis);
-  }
+}
   
-  ::-ms-input-placeholder { /* Microsoft Edge */
+::-ms-input-placeholder { /* Microsoft Edge */
     color:  var(--text-med-emphasis);
-  }
+}
 
 #login-textfield:focus {
     background-color: var(--teal-standard-color);
@@ -393,7 +393,7 @@ button:focus {
 
 #note-header-grid {
     display: grid;
-    grid-template-columns: auto 100px;
+    grid-template-columns: auto 50px;
 }
 
 #note-header-grid .standard-button {
@@ -427,7 +427,7 @@ button:focus {
     background: var(--editor-gradient);
 }
 
-/* Container där knapparna Save och Reset finns (för tillfället) */
+/* Container där knapparna Save och Reset finns */
 #buttons-container {
     display: flex;
     justify-content: right;
@@ -435,14 +435,6 @@ button:focus {
     padding-right: 10px;
     background: var(--dark-gradient);
     box-shadow: inset 0 -6px 6px rgba(0, 0, 0, 0.4);
-}
-
-#logout-button{
-    height: 100%;
-    width: 20%;
-    margin: 0;
-    border-radius: 0;
-    color: var(--text-med-emphasis);
 }
 
 /* PROBLEM */
@@ -458,7 +450,7 @@ button:focus {
 /* Style the side navigation */
 #sidenav {
     display: grid;
-    grid-template-rows: 50px auto 50px;
+    grid-template-rows: min-content auto 50px;
     margin: 0;
     padding: 0;
     background: linear-gradient(-90deg, var(--login-top) -200%,
@@ -515,11 +507,18 @@ button:focus {
     height: 100%;
     margin: 0;
     padding-top: 10px;
+    padding-bottom: 10px;
     text-shadow: -3px -3px 6px rgba(255, 255, 255, 0.1), 3px 3px 6px rgba(0, 0, 0, 0.2), -1px -1px 2px rgba(255, 255, 255, 0.2), 1px 1px 2px rgba(0, 0, 0, 0.4);
 }
 /*#endregion*/
 
 /*#region NOTES*/
+
+.top-header {
+    display: inline-flex;
+    margin: 0;
+}
+
 .note-header {
     display: flex;
     justify-content: center;
@@ -527,12 +526,15 @@ button:focus {
     font-size: 200%;
     border: 1px solid black;
     background: var(--dark-gradient);
-     width: 80%;
+    width: 90%;
 }
 
-.top-header{
-    display: inline-flex;
+#logout-button {
+    height: 100%;
+    width: 10%;
     margin: 0;
+    border-radius: 0;
+    color: var(--text-med-emphasis);
 }
 
 /* Container där knapparna Save och Reset finns (för tillfället) */
@@ -594,20 +596,20 @@ button:focus {
 /* width */
 ::-webkit-scrollbar {
     width: 20px;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: var(--login-bottom);
-  }
-  
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: var(--login-top)
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #555;
-  }
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: var(--login-bottom);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--login-top)
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
   /*#endregion*/
