Möjlighet att ladda upp filer
* Gjorde så alla toolbar-items läggs in i HTML-filen.

--- a/src/www/stylesheet.css
+++ b/src/www/stylesheet.css
@@ -590,6 +590,10 @@ button:focus {
 .ql-editor {
     overflow-y: scroll;
 }
+
+#attach-file-button {
+    
+}
 /*#endregion*/
 
 /*#region SCROLLBAR*/
